# Framenotwork_SOEN341_Project_F24

./: .eslintrc.js  .gitignore  README.md  burndown.py  package-lock.json  package.json  soen341.session.sql
peer-assessment-app/: jest.config.js  launch.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
peer-assessment-app/app/: card.tsx  globals.css  layout.tsx  middleware.ts  page.tsx
peer-assessment-app/app/(dashboard)/: layout.tsx
peer-assessment-app/app/(login)/: layout.tsx  student_instructor_toggle.tsx
peer-assessment-app/app/Instructor/: page.tsx
peer-assessment-app/app/Student/: page.tsx
peer-assessment-app/app/Test_StudentRatingForm/: page.tsx
peer-assessment-app/app/Test_TeamsView/: page.tsx
peer-assessment-app/app/Test_instructor_student_rating/: page.tsx
peer-assessment-app/app/Test_progress_bar/: page.tsx
peer-assessment-app/app/api/: protected.ts
peer-assessment-app/app/components/: AccountMenu.tsx  ClassCreation.tsx  Course.tsx  CourseCard.tsx  DowloadButton.tsx  InsertCSV.tsx  InstructorTabs.tsx  LeftSidebar.tsx  Navbar.tsx  Profile.tsx  ResultSummary.tsx  StudentAttributes.tsx  StudentInfo.tsx  StudentList.tsx  StudentRatingForm.tsx  StudentTabs.tsx  Tabs.tsx  TeamsDrop.tsx  TeamsStudents.tsx
peer-assessment-app/lib/: db.ts
peer-assessment-app/tests/: backend.test.ts  test_assessment_submission.py  test_evaluation.py  test_instructor_dash.py  test_register_api.py  test_signin_api.py  test_student_dashboard.py  test_team_creation.py  test_team_view.py
peer-assessment-app/types/: next-auth.d.ts
(+50 files in other folders)
